feat: Change polybar xkeyboard label indicator color to foreground.

--- a/polybar/modules/xkeyboard.ini
+++ b/polybar/modules/xkeyboard.ini
@@ -21,7 +21,7 @@ format-spacing = 0
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
 ; label-layout-padding = 2
-label-indicator-foreground = ${colors.background}
+label-indicator-foreground = ${colors.foreground}
 label-indicator-background = ${colors.secondary}
 
 ; Available tokens:
@@ -78,4 +78,5 @@ label-indicator-background = ${colors.secondary}
 ; label-indicator-on-numlock = 
 ; label-indicator-off-numlock = 
 ; label-indicator-on-scrolllock = 
-; label-indicator-off-scrolllock = 
+; label-indicator-off-scrolllock =
+;
