feat: Enable touchpad tapping gesture with xinput.

--- a/i3/config
+++ b/i3/config
@@ -232,3 +232,6 @@ for_window [class="^.*"] border pixel 5
 # Launch screenkey to display keyboard key
 exec screenkey >/dev/null 2>&1 & 
 
+# Enable touchpad tapping gesture with xinput
+exec xinput --set-prop "ELAN0708:00 04F3:30A0 Touchpad" "libinput Tapping Enabled" 1
+
