feat: Add xbacklight module polybar.

--- a/.config/polybar/modules/modules.ini
+++ b/.config/polybar/modules/modules.ini
@@ -10,3 +10,4 @@ include-file = ~/.config/polybar/modules/xkeyboard.ini
 include-file = ~/.config/polybar/modules/xworkspace.ini
 include-file = ~/.config/polybar/modules/network.ini
 include-file = ~/.config/polybar/modules/script.ini
+include-file = ~/.config/polybar/modules/xbacklight.ini
