--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -57,7 +57,7 @@ separator-foreground = ${colors.background}
 font-0 = "FiraCode Nerd Font:size=11;2"
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan battery date suspend
+modules-right = xbacklight filesystem pulseaudio xkeyboard memory cpu wlan battery date suspend
 
 cursor-click = pointer
 cursor-scroll = ns-resize
