--- a/.config/i3/config
+++ b/.config/i3/config
@@ -207,11 +207,11 @@ client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 client.background       #F8F8F2
 
 # Window padding, only work on >= 4.22
-# for_window [class="^.*"] border pixel 5
-# gaps_inner 10
-# gaps_uter 5
-# smart_gaps on
-# smart_borders on
+for_window [class="^.*"] border pixel 5
+gaps inner 5
+gaps outer 0
+smart_gaps on
+smart_borders on
 
 # Launch polybar
 # exec_always: when config is reload, this command will execute
