--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -43,8 +43,16 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+# Disable this if using i3-gaps.
+# border-size = 4pt
+
 border-color = #00000000
+
+# Enable this if using i3-gaps.
+border-left = 5
+border-right = 5
+border-top = 5
+border-bottom = 0
 
 padding-left = 0
 padding-right = 1
