feat: Implement show, select, and paste bookmark with xdotool and rofi drun.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -229,8 +229,10 @@ default_floating_border pixel 5
 for_window [class="^.*"] border pixel 5
 
 # Launch screenkey to display keyboard key
-exec screenkey >/dev/null 2>&1 & 
+exec screenkey >/dev/null 2>&1 &
 
 # Enable touchpad tapping gesture with xinput
 exec xinput --set-prop "ELAN0708:00 04F3:30A0 Touchpad" "libinput Tapping Enabled" 1
 
+# Show, select, and paste bookmark.txt file
+bindsym $cmd+b exec xdotool type $(grep -v '^#' ~/bookmarks.txt | rofi -dmenu -p 'bookmark' | cut -d ' ' -f1) >/dev/null 2>&1 &
