feat: Implement tmux-sessionizer using fzf and .directory_list file.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,10 @@ bind -r l select-pane -R
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-set-option -g status-right " #{=21:pane_title} "
+set -g status-left-length 20
+set -g status-right-length 30
+set-option -g status-left " [#{session_name}] "
+set-option -g status-right " #{pane_title} "
 set -g status-style 'bg=#50fa7b fg=#44475a'
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
