--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -7,14 +7,14 @@ interval = 1.0
 
 ; See "https://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %Y-%m-%d %H:%M:%S
+date = %H:%M
 
 ; Optional time format
 time = %H:%M
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = %H:%M
+date-alt = %A %Y-%m-%d %H:%M:%S
 
 ; Available tags:
 ;   <label> (default)
