--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set -ga terminal-overrides ",screen-256color*:Tc"
+set-option -g default-terminal "screen-256color"
 set-option -g prefix C-b
 set -g base-index 1
 set -g status-position bottom
@@ -24,3 +26,5 @@ set-option -g status-right " #{pane_title} "
 set -g status-style 'bg=#50fa7b fg=#44475a'
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r N run-shell "~/.local/bin/open-note"
+
