feat: Implement i3 binding for toggling display mode.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -256,3 +256,5 @@ bindsym $cmd+k exec $HOME/.local/bin/toggle-app screenkey >/dev/null 2>&1 &
 # List, show, select, and open pdf from .directory_list file using zathura
 bindsym $cmd+p exec $HOME/.local/bin/open-pdf >/dev/null 2>&1 &
 
+# Toggle display mode
+bindsym $cmd+Shift+p exec $HOME/.local/bin/toggle-display-mode >/dev/null 2>&1 &
