feat: Add zathura to picom opacity rule.

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,6 +4,7 @@ opacity-rule = [
 "90:class_g = 'kitty' ",
 "90:class_g = 'Alacritty'",
 "90:class_g = 'Org.gnome.Nautilus'",
-"90:class_g = 'obsidian'"
+"90:class_g = 'obsidian'",
+"90:class_g = 'Zathura'"
 ];
 
