--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,4 +27,5 @@ set -g status-style 'bg=#50fa7b fg=#44475a'
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r N run-shell "~/.local/bin/open-note"
+bind-key -r C run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
