--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g base-index 1
 set -g status-position bottom
 bind r source-file ~/.config/tmux/tmux.conf
 
-set-option -g default-shell '/usr/bin/fish'
+set-option -g default-shell '/usr/bin/zsh'
 set-window-option -g mode-keys vi
 set-window-option -g mouse on
 
