refactor: Change color scheme from dracula to catppuccin macchiato.

--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -15,8 +15,8 @@ warn-percentage = 95
 ;   <ramp-load>
 ;   <ramp-coreload>
 format = <label>
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix = " "
+format-prefix-foreground = ${colors.mauve}
 
 ; Format used when average CPU load (same as %percentage%) reaches warn-percentage
 ; If not defined, format is used instead.
