--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -18,9 +18,9 @@ date-alt = %A %Y-%m-%d %H:%M:%S
 
 ; Available tags:
 ;   <label> (default)
-; format = 🕓 <label>
-; format-background = #55ff3399
-; format-foreground = #fff
+format = %{F#91d7e3} %{F#cad3f5}<label>
+; format-background = ${colors.base}
+; format-foreground = ${colors.text}
 
 ; Available tokens:
 ;   %date%
