--- a/.config/polybar/modules/filesystem.ini
+++ b/.config/polybar/modules/filesystem.ini
@@ -51,13 +51,13 @@ format-unmounted = <label-unmounted>
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %{F#bd93f9}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#c6a0f6}%{F-} %percentage_used%%
 
 ; Available tokens:
 ;   %mountpoint%
 ; Default: %mountpoint% is not mounted
 label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+label-unmounted-foreground = ${colors.red}
 
 ; Available tokens:
 ;   %mountpoint%
