--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -20,8 +20,8 @@ warn-percentage = 95
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
+format-prefix = " "
+format-prefix-foreground = ${colors.mauve}
 
 ; Format used when RAM reaches warn-percentage
 ; If not defined, format is used instead.
