--- a/.config/polybar/modules/network.ini
+++ b/.config/polybar/modules/network.ini
@@ -76,7 +76,7 @@ format-disconnected = <label-disconnected>
 ; label-connected-foreground = #eefafa
 
 ; Default: (none)
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#c6a0f6}%ifname%%{F#ed8796} disconnected
 ; label-disconnected-foreground = #66ffff
 
 ; Default: (none)
@@ -105,9 +105,9 @@ interface = ${system.sys_wlan_interface}
 interface-type = wireless
 interval = 0.5
 # label-connected = %{F#6272a4}%ifname%%{F-} %essid% %local_ip%
-label-connected = %{F#bd93f9}%local_ip%%{F-} U:%upspeed% D:%downspeed%
+label-connected = %{F#c6a0f6}%local_ip%%{F-} U:%upspeed% D:%downspeed%
 
 [module/eth]
 inherit = network-base
 interface-type = ${system.sys_eth_interface}
-label-connected = %{F#bd93f9}%ifname%%{F-} %local_ip%
+label-connected = %{F#c6a0f6}%ifname%%{F-} %local_ip%
