--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -18,8 +18,8 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <label-volume>
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = "󰕾 "
+format-volume-prefix-foreground = ${colors.mauve}
 
 ; Available tags:
 ;   <label-muted> (default)
@@ -36,7 +36,7 @@ format-volume-prefix-foreground = ${colors.primary}
 ;   %percentage% (default)
 ;   %decibels%
 label-muted = "󰝟 muted"
-label-muted-foreground = ${colors.alert}
+label-muted-foreground = ${colors.red}
 
 ; Only applies if <ramp-volume> is used
 ; ramp-volume-0 = 🔈
