--- a/.config/polybar/modules/script.ini
+++ b/.config/polybar/modules/script.ini
@@ -36,7 +36,7 @@ exec = echo "󰤄"
 ;   <label> (default)
 format = <label>
 ; format-background = #999
-format-foreground = ${colors.primary}
+format-foreground = ${colors.blue}
 format-padding = 1
 
 ; Format used when the `exec` command returns with a non-zero exit code 
