--- a/.config/polybar/modules/xkeyboard.ini
+++ b/.config/polybar/modules/xkeyboard.ini
@@ -19,10 +19,10 @@ format-spacing = 0
 ;   %variant% (New in version 3.6.0)
 ; Default: %layout%
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+label-layout-foreground = ${colors.mauve}
 ; label-layout-padding = 2
-label-indicator-foreground = ${colors.foreground}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${colors.text}
+label-indicator-background = ${colors.surface2}
 
 ; Available tokens:
 ;   %name%
