--- a/.config/polybar/modules/xwindow.ini
+++ b/.config/polybar/modules/xwindow.ini
@@ -3,8 +3,8 @@ type = internal/xwindow
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-background = ${colors.background-alt}
-format-foreground = ${colors.foreground}
+format-background = ${colors.surface0}
+format-foreground = ${colors.text}
 format-padding = 1
 
 ; Available tokens:
@@ -18,4 +18,4 @@ label-maxlen = 50
 ; Available tokens:
 ;   None
 label-empty = Empty
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${colors.red}
