--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,9 +23,8 @@ set -g status-left-length 20
 set -g status-right-length 30
 set-option -g status-left " [#{session_name}] "
 set-option -g status-right " #{pane_title} "
-set -g status-style 'bg=#50fa7b fg=#44475a'
+set -g status-style 'bg=#a6e3a1 fg=#1e1e2e'
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r N run-shell "~/.local/bin/open-note"
 bind-key -r C run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
-
