--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,6 +9,34 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+# Set color.
+set $rosewater #f4dbd6
+set $flamingo  #f0c6c6
+set $pink      #f5bde6
+set $mauve     #c6a0f6
+set $red       #ed8796
+set $maroon    #ee99a0
+set $peach     #f5a97f
+set $yellow    #eed49f
+set $green     #a6da95
+set $teal      #8bd5ca
+set $sky       #91d7e3
+set $sapphire  #7dc4e4
+set $blue      #8aadf4
+set $lavender  #b7bdf8
+set $text      #cad3f5
+set $subtext1  #b8c0e0
+set $subtext0  #a5adcb
+set $overlay2  #939ab7
+set $overlay1  #8087a2
+set $overlay0  #6e738d
+set $surface2  #5b6078
+set $surface1  #494d64
+set $surface0  #363a4f
+set $base      #24273a
+set $mantle    #1e2030
+set $crust     #181926
+
 # $mod = Alt, $cmd = Cmd
 set $mod Mod1
 set $cmd Mod4
@@ -198,13 +226,12 @@ bindsym $mod+d exec rofi -show drun
 bindsym $cmd+l exec i3lock --color=000000
 
 # class                 border  bground text    indicator child_border
-client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
-client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
-client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
-client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
-client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
-
-client.background       #F8F8F2
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
 # Window padding, only work on >= 4.22
 gaps inner 5
@@ -259,6 +286,11 @@ bindsym $cmd+f exec $HOME/.local/bin/open-file >/dev/null 2>&1 &
 # Toggle display mode
 bindsym $cmd+p exec $HOME/.local/bin/toggle-display-mode >/dev/null 2>&1 &
 
+# Toggle display gamma
+bindsym $cmd+o exec $HOME/.local/bin/toggle-display-gamma >/dev/null 2>&1 &
+
 # Toggle screen record
 bindsym $cmd+Shift+r exec $HOME/.local/bin/toggle-screen-record >/dev/null 2>&1 &
 
+# Enable Sticky floating windows for picture in picture browser
+for_window [title="Picture-in-Picture"] sticky enable
