--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,13 +22,38 @@ include-file = ~/.config/polybar/system.ini
 include-file = ~/.config/polybar/modules/modules.ini
 
 [colors]
-background = #282a36
-background-alt = #44475a
-foreground = #f8f8f2
-primary = #bd93f9
-secondary = #6272a4
-alert = #ff5555
-disabled = #ffb86c
+ base = #24273a
+ mantle = #1e2030
+ crust = #181926
+
+ text = #cad3f5
+ subtext0 = #a5adcb
+ subtext1 = #b8c0e0
+
+ surface0 = #363a4f
+ surface1 = #494d64
+ surface2 = #5b6078
+
+ overlay0 = #6e738d
+ overlay1 = #8087a2
+ overlay2 = #939ab7
+
+ blue = #8aadf4
+ lavender = #b7bdf8
+ sapphire = #7dc4e4
+ sky = #91d7e3
+ teal = #8bd5ca
+ green = #a6da95
+ yellow = #eed49f
+ peach = #f5a97f
+ maroon = #ee99a0
+ red = #ed8796
+ mauve = #c6a0f6
+ pink = #f5bde6
+ flamingo = #f0c6c6
+ rosewater = #f4dbd6
+
+ transparent = #FF00000
 
 [bar/main]
 monitor = ${env:MONITOR:}
@@ -38,8 +63,8 @@ radius = 6
 
 ; dpi = 96
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.base}
+foreground = ${colors.text}
 
 line-size = 3pt
 
@@ -60,7 +85,7 @@ padding-right = 1
 module-margin = 0.5
 
 separator = |
-separator-foreground = ${colors.background}
+separator-foreground = ${colors.base}
 
 font-0 = "FiraCode Nerd Font:size=11;2"
 
