--- a/.config/polybar/modules/battery.ini
+++ b/.config/polybar/modules/battery.ini
@@ -76,7 +76,7 @@ label-discharging = " %percentage%%"
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
-label-full = %{F#50fa7b} %{F-} %percentage%%
+label-full = %{F#a6da95} %{F-} %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -84,7 +84,7 @@ label-full = %{F#50fa7b} %{F-} %percentage%%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
 ; New in version 3.6.0
-label-low = %{F#ff5555} %{F-} %percentage%%
+label-low = %{F#ed8796} %{F-} %percentage%%
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
@@ -92,7 +92,7 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.foreground}
+ramp-capacity-foreground = ${colors.rosewater}
 
 
 ; Only applies if <bar-capacity> is used
@@ -104,7 +104,7 @@ animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-foreground = ${colors.primary}
+animation-charging-foreground = ${colors.teal}
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
