--- a/.config/polybar/modules/xworkspace.ini
+++ b/.config/polybar/modules/xworkspace.ini
@@ -2,17 +2,17 @@
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.secondary}
+label-active-background = ${colors.surface0}
+label-active-underline= ${colors.mauve}
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${colors.yellow}
 label-empty-padding = 1
