fix: Neovim and tmux integration related to escape time.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set-option -g default-terminal "screen-256color"
 set-option -g prefix C-b
 set -g base-index 1
 set -g status-position bottom
+set-option -sg escape-time 10
 bind r source-file ~/.config/tmux/tmux.conf
 
 set-option -g default-shell '/usr/bin/zsh'
@@ -28,3 +29,4 @@ set -g status-style 'bg=#a6e3a1 fg=#1e1e2e'
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r N run-shell "~/.local/bin/open-note"
 bind-key -r C run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
+
