--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,3 @@
-# https://alacritty.org/config-alacritty.html
-
-import = ["/home/tirzasrwn/.config/alacritty/catppuccin-macchiato.toml"]
-live_config_reload = true
 
 [cursor]
 blink_interval = 750
@@ -34,5 +30,13 @@ style = "Italic"
 family = "FiraCode Nerd Font"
 style = "Regular"
 
-[shell]
+[general]
+live_config_reload = true
+# https://alacritty.org/config-alacritty.html
+
+import = ["/home/tirzasrwn/.config/alacritty/catppuccin-macchiato.toml"]
+
+[terminal]
+
+[terminal.shell]
 program = "/usr/bin/zsh"
