feat: Implement tmux binding d for todo.md file and hjkl for project bookmark.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set-option -g prefix C-b
+bind-key C-b send-prefix
 set -g base-index 1
 set -g status-position bottom
 set-option -sg escape-time 10
@@ -30,3 +31,9 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r N run-shell "~/.local/bin/open-note"
 bind-key -r C run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
+bind -r D neww -c "#{pane_current_path}" "[[ -e todo.md ]] && nvim todo.md || nvim ~/todo.md"
+
+bind-key -r H run-shell "~/.local/bin/tmux-sessionizer ~/dev/github/laporan-skripsi"
+bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/dev/github/komainu"
+bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/dev/pendig/core.kelompok"
+bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/dev/pendig/be.penapay"
