--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,11 @@ set-option -g default-shell '/usr/bin/zsh'
 set-window-option -g mode-keys vi
 set-window-option -g mouse on
 
+# Bind 'x' to kill the current window without confirmation
+bind x kill-window
+# Bind 'X' to kill the current session without confirmation
+bind X kill-session
+
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -29,7 +34,7 @@ set -g status-style 'bg=#a6e3a1 fg=#1e1e2e'
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r N run-shell "~/.local/bin/open-note"
-bind-key -r C run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
+bind-key -r o run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e todo.md ]] && nvim todo.md || nvim ~/todo.md"
 
