--- a/.config/polybar/system.ini
+++ b/.config/polybar/system.ini
@@ -19,7 +19,7 @@
 [system]
 sys_adapter = AC
 sys_battery = BAT0
-sys_graphics_card = amdgpu_bl0
-sys_wlan_interface = wlp3s0
-sys_eth_interface = eno1
+sys_graphics_card = amdgpu_bl1
+sys_wlan_interface = wlp4s0
+sys_eth_interface = enp2s0
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
